Mofified the  characteristics view to display details of selected animal